[package]
name = "rsa"
version = "0.3.0"
authors = ["RustCrypto Developers", "dignifiedquire <dignifiedquire@gmail.com>"]
edition = "2018"
description = "Pure Rust RSA implementation"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rsa"
repository = "https://github.com/RustCrypto/RSA"
keywords = ["rsa", "encryption", "security", "crypto"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
num-bigint = { git = "https://github.com/alechenthorne/num-bigint", features = ["i128", "u64_digit", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
num-integer = { version = "0.1.44", default-features = false }
num-iter = { version = "0.1.42", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
rand = { version = "0.8.2", default-features = false, features = ["std_rng"] }
byteorder = { version = "1.4.2", default-features = false }
subtle = { version = "2.4.0", default-features = false }
simple_asn1 = { version = "0.5.1", optional = true }
pem = { version = "0.8.2", optional = true }
digest = { version = "0.9.0", default-features = false }

[dependencies.zeroize]
version = "1.2.0"
features = ["alloc", "zeroize_derive"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0.119"
default-features = false
features = ["derive"]

[dev-dependencies]
base64 = "0.13.0"
hex = "0.4.2"
serde_test = "1.0.119"
rand_xorshift = "0.3.0"
pem = "0.8.2"
sha-1 = { default-features = false, version = "0.9.2" }
sha2 = { default-features = false, version = "0.9.2" }
sha3 = { default-features = false, version = "0.9.1" }

[[bench]]
name = "key"

[profile.release]
# debug = true

[profile.bench]
# debug = true

[features]
default = ["std", "pem"]
nightly = ["subtle/nightly", "num-bigint/nightly"]
serde = ["num-bigint/serde", "serde_crate"]
expose-internals = []
std = ["alloc", "simple_asn1", "digest/std", "rand/std"]
alloc = ["digest/alloc"]
